tests/error/ptr_assign_class.gw
// [contains] can't assign function pointer in class for the moment. sorry.
 class C
{
	typedef void (test0)();
	function void test1(){};
	test1 @=> test0;
}
